# rust-kubernetes-operator

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: Rust_Kubernetes_Operator_Full_Implementation_Guide_v1.md  Rust_Kubernetes_Operator_Learning_Roadmap.md  kube_guardian_professional_implementation_guide.md
src/: cli.rs  controller.rs  crd.rs  main.rs  reconcile.rs  webhook.rs
src/governance/: mod.rs  policies.rs  traits.rs
